src/assets/style/global.css
/* Global styles shared across all pages go here */

/* Variables */
:root {
  --space__small: 0.5rem;
  --navigation-height: 50px;

  /* color scheme red */
  --bg: #db2323;
  --user-name-color: #fff1d0;
  --track-name-color: #fff;
  --equalizer-color: #fff;
  --divider-line-color: 255, 69, 0;

  /* color scheme cyan */
  --bg: #209586;
  /* --user-name-color: #32313a; */
  --user-name-color: #fff1d0;
  --divider-line-color: 102, 188, 169;

  /* color scheme light blue */
  --bg: #6dd3ce;
  --user-name-color: #fff1d0;

  /* color scheme darker blue */
  --bg: #1c5d99;
  --user-name-color: #639fab;

  /* color scheme lighter blue */
  --bg: #ff3838;
  --user-name-color: #fff1d0;
  --divider-line-color: 255, 69, 244;

  /* color scheme dark */
  --bg: #30343f;
  --user-name-color: #1db954;
  --equalizer-color: var(--user-name-color);
  --divider-line-color: 29, 185, 84;
  --divider-line-color: 29, 29, 29;

  /* --user-name-color: #ffeccc; */
  /* --user-name-color: #f6f4d2; */
}

body {
  margin: 0 0 calc(var(--navigation-height) + 22.5px) 0;
  overflow-y: scroll; /* avoid content jump */
}
/* Resets */
ul {
  margin: 0;
  padding: 0;
}
li {
  list-style-type: none;
}

img {
  user-select: none;
}

p {
  margin: 0;
}

/* Global Styles */

body {
  background: var(--bg);
  font-family: 'Clear Sans', serif;
  overscroll-behavior-y: none;
}

